// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should match a snapshot for a componentError 1`] = `
<div
  className="undefined undefined"
  data-test="toast-wrapper"
  onClick={[MockFunction]}
>
  <button
    className="btn btn-danger btn-lg btn-block"
  >
    Something went wrong with this component
  </button>
</div>
`;

exports[`Toast should match a snapshot for a serverError 1`] = `
<div
  className="undefined undefined"
  data-test="toast-wrapper"
  onClick={[MockFunction]}
>
  <button
    className="btn btn-danger btn-lg btn-block"
  >
    Something went wrong fetching data
  </button>
</div>
`;
